# django-connexion

./: .coveragerc  .gitignore  README.md  pytest.ini  setup.cfg  setup.py
.github/workflows/: python-publish.yml  python.yml
django_connexion/: __init__.py  middleware.py
django_connexion/apis/: __init__.py  django_api.py  django_utils.py
django_connexion/apps/: __init__.py  django_app.py
django_connexion/locals/: context.py
django_connexion/security/: django_security_handler_factory.py
django_connexion/tests/: conftest.py  test_basic.py  test_upload.py
django_connexion/tests/api/: test_get_response.py
django_connexion/tests/fakeapi/: auth.py  django_handlers.py
django_connexion/tests/fixtures/django/: swagger_secure.yaml
django_connexion/tests/testapp/: apis.py  settings.py  urls.py  views.py
django_connexion/tests/testapp/openapi/: file-upload.yaml  helloworld-api.yaml
