[metadata]
name = django_connexion
version = 0.0.2
url = https://github.com/buserbrasil/django-connexion
author = Iuri de Silvio
author_email = iurisilvio@gmail.com
description = Django connexion extension
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

[tool:pytest]
DJANGO_SETTINGS_MODULE=django_connexion.tests.testapp.settings
addopts = --nomigrations --cov=django_connexion --cov-report html --cov-report term --flake8
python_files = tests.py test_*.py *_tests.py

[flake8]
max-line-length = 100

[aliases]
test=pytest
